rename 3 notebook, set crs before export

--- a/code/03_clean-join-tract-data.ipynb
+++ b/code/03_clean-join-tract-data.ipynb
@@ -247,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nyc_tracts = gpd.read_file('../data/raw/nyct2010.shp')"
+    "nyc_tracts = gpd.read_file('../data/raw/nyct2010.shp').set_crs(2263)"
    ]
   },
   {
@@ -410,7 +410,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x121cd4610>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1236d5310>"
       ]
      },
      "execution_count": 6,
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
